add service mysql
