# app/Virtual/StoreUserRequest.php
@@ -1,0 +1,58 @@
+<?php
+/**
+ * @OA\Schema(
+ *      title="Store Project request",
+ *      description="Store Project request body data",
+ *      type="object",
+ *      required={"name"}
+ * )
+ */
+
+class StoreProjectRequest
+{
+    /**
+     * @OA\Property(
+     *      title="name",
+     *      description="Name of the new user",
+     *      example="A nice user name"
+     * )
+     *
+     * @var string
+     */
+    public $name;
+
+    /**
+     * @OA\Property(
+     *      title="email",
+     *      description="email of the new user",
+     *      example="This is new user's email"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
+    /**
+     * @OA\Property(
+     *      title="password",
+     *      description="password of the new user",
+     *      format="string",
+     *      example=123456
+     * )
+     *
+     * @var string
+     */
+    public $password;
+
+    /**
+     * @OA\Property(
+     *      title="password_confirmation",
+     *      description="password_confirmation of the new user",
+     *      format="string",
+     *      example=123456
+     * )
+     *
+     * @var string
+     */
+    public $password_confirmation;
+}
